# hs_api

./: .gitignore  README.md  README.org  __init__.py  _simple_sim.py  api.py  config.yaml  flake.nix  getting_started.ipynb  intermediate_format.py  oldREADME.md  pyproject.toml  requirements.txt  simple_sim.py  stats  test_CNN_sw.py  test_MLP_sw.py  test_stride.py  test_stride_cnn.py  test_stride_hw.py  test_stride_hw_multi.py  test_stride_sw.py  test_syn.py  test_syn_multi.py  test_syn_sim.py
.github/workflows/: pylint.yml
converter/: cri_converter.py  quant_network.py
examples/: cmrr_demo.py  demo.py  gTest_syth.py  getting_started.ipynb  justin_test2.py  mnist.ipynb  multiNeuron_demo.py  nmnist.py  synth_stress.py  synthnet.py  telltest.py  unet.ipynb
examples/CRI_Mapping/: cnn_train_time.py  icrcdemo.py  utils.py
examples/test_suite/: test_generator.py
hs_api/: _simple_sim.py  api.py  converter.py  neuron_models.py  nir.py
hs_api/converter/: cri_converter.py
hs_api/converter/quant/: quant_layer.py
l2s/: _simple_sim.py  api.py  utils.py
snntorch_mnist/: cri_snntorch_cnn.py  cri_snntorch_execution.py  cri_snntorch_execution_gopa.py  quant_aware_training.py  quant_layer.py  quantization.py  training.py
tests/: __init__.py  api_test.py  test_l2s.py  test_stride.py  test_stride_cnn.py  test_stride_hw.py  test_stride_sim.py  test_stride_sw.py  test_syn.py
