[tool.poetry]
name = "l2s"
version = "0.1.0"
description = "CRI User Software"
authors = ["Justin Frank & Abhinav Uppal"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numba = "^0.55.1"
numpy = ">=1.18,<1.22"
PyYAML = "^6.0"
jupyterlab = "^3.3.3"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
